--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           c2.024-1.319,5.996-0.047,7.94,0.606c2.786,0.936,5.28,2.496,7.235,4.706C140.43,32.967,141.876,36.732,138.718,39.658z" />
             </g>
         </svg>
-        <h1 id="animated-text"><B>Happy Rose Day</B><br>My Love KK</h1>
+        <h1 id="animated-text"><B>Happy Rose Day</B><br>My Love</h1>
     </div>
     <script src="script.js"></script>
 </body>
